# sflkit

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  requirements_test.txt
.github/workflows/: release.yml  test-sflkit.yml
antlr/java/: JavaLexer.g4  JavaParser.g4
jsflkit/: .gitignore  LICENSE  README.md  build.gradle
jsflkit/src/main/java/de/cispa/sflkitlib/: ClassMap.java  JLib.java
jsflkit/src/main/java/de/cispa/sflkitlib/events/: JCodec.java  JPickle.java  JPickleUtils.java
jsflkit/src/main/java/de/cispa/sflkitlib/events/event/: JBranchEvent.java  JDefEvent.java  JEvent.java  JEventType.java  JLineEvent.java
jsflkit/src/test/java/de/cispa/sflkitlib/: ClassMapTests.java  CodecTest.java  PickleTest.java  TestLen.java
resources/subjects/tests/expressions/expr/: parse.py
resources/subjects/tests/test_dw_def_use/: test.py
resources/subjects/tests/test_dw_distances/: main.py  test.py
resources/subjects/tests/test_fendr_def_uses/: main.py
resources/subjects/tests/test_parallel/: example.py
resources/subjects/tests/test_parallel/tests/: test_example.py
resources/subjects/tests/test_xxx_def_uses/: test.py
resources/subjects/tests/test_xxx_lines/: test.py
resources/subjects/tests/test_xxx_setup/: test.py
src/sflkit/: __init__.py  cli.py  config.py  evaluation.py  mapping.py
src/sflkit/analysis/: analysis_type.py  analyzer.py  factory.py  predicate.py  similarity.py  spectra.py
src/sflkit/dependency/: __init__.py  analyzer.py  models.py
src/sflkit/events/: event_file.py  mapping.py
src/sflkit/features/: handler.py  value.py  vector.py
src/sflkit/fendr/: __init__.py  analyzer.py
src/sflkit/instrumentation/: __init__.py  dir_instrumentation.py  file_instrumentation.py
src/sflkit/language/: language.py  meta.py  visitor.py
src/sflkit/language/java/: extract.py  factory.py  visitor.py
src/sflkit/language/java/parser/: JavaASTBuilder.py  JavaLexer.py  JavaParser.py  JavaParserListener.py  JavaParserVisitor.py  jast.py
src/sflkit/language/python/: extract.py  factory.py
src/sflkit/model/: event_file.py  model.py  parallel.py  scope.py
src/sflkit/runners/: __init__.py  run.py
src/sflkit/weights/: __init__.py  analyzer.py  models.py
src/sflkit/xxx/: analyzer.py  models.py
tests/: test_analysis_objects.py  test_analyzer.py  test_cli.py  test_config.py  test_dependency_weights.py  test_events.py  test_expression.py  test_features.py  test_fendr.py  test_instrumentation.py  test_language.py  test_parallelization.py  test_predicates.py  test_runner.py  test_runner_parallel.py  test_runner_pytest_versions.py  test_scope.py  test_spectra.py  test_suggestions.py  test_visitors.py  test_xxx.py  utils.py
