[build-system]
requires = [
    "setuptools>=75.8.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "sflkit"
version = "0.4.0"
authors = [
    { name = "Marius Smytzek", email = "marius.smytzek@cispa.de" },
]
description = "SFLKit: : A Workbench for Statistical Fault Localization"
readme = "README.md"
license-file = "LICENSE"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing"
]
dependencies = [
    "sflkitlib>=0.1.1",
    "numpy>=2.1.3",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "sortedcollections>=2.1.0",
    "java-ast>=1.0.2",
]

[project.urls]
"Homepage" = "https://github.com/smythi93/sflkit/"
"Bug Tracker" = "https://github.com/smythi93/sflkit/issues"

[project.scripts]
sflkit = "sflkit.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
    "pytest-rerunfailures>=15.0",
    "parameterized>=0.9.0"
]

[tool.black]
line-length = 88
target-version = ['py310']
