[build-system]
requires = [
    "setuptools>=75.8.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "sflkit"
dynamic = ["version"]
authors = [
    { name = "Marius Smytzek", email = "marius.smytzek@cispa.de" },
]
description = "SFLKit: : A Workbench for Statistical Fault Localization"
readme = "README.md"
license-files = ["LICENSE*"]
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing"
]
dependencies = [
    "sflkitlib @ git+ssh://git@github.com/smythi93/sflkit-lib.git",
    "numpy>=2.1.3",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "sortedcollections>=2.1.0",
    "java-ast>=1.0.2",
]

[project.urls]
"Homepage" = "https://github.com/smythi93/sflkit/"
"Bug Tracker" = "https://github.com/smythi93/sflkit/issues"

[tool.setuptools.dynamic]
version = {attr = "sflkit.__version__"}

[project.scripts]
sflkit = "sflkit.cli:main"

# only include packages in src/
[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
    "pytest-rerunfailures>=15.0",
    "parameterized>=0.9.0"
]

[tool.black]
line-length = 88
target-version = ['py310']
